crates/core/tests/snapshots/webpack4_unpack__module-19.snap
---
source: crates/core/tests/webpack4_unpack.rs
expression: code
---
"use strict";
export const FETCH_DATA = "main => FETCH_DATA";
