crates/core/tests/snapshots/webpack4_unpack__module-20.snap
---
source: crates/core/tests/webpack4_unpack.rs
expression: code
---
"use strict";
export default require("./module-43.js");
