crates/core/tests/snapshots/webpack4_unpack__module-21.snap
---
source: crates/core/tests/webpack4_unpack.rs
expression: code
---
import { a as a_1 } from "./module-31.js";
"use strict";
let o;
o = globalThis;
export const a = a_1(o);
